<resources>
    <string name="app_name">QR Scanner</string>
    <string name="app_intro">QR SCANNER</string>

    <string name="scan_qr_text">Scan the QR Code</string>

    <string name="scan_qr">Scan QR</string>
    <string name="gen_custom_qr">Generate custom QR</string>
    <string name="choose_img_qr">Choose image in storage</string>

    <string name="your_qr_code">Your QR code</string>
    <string name="your_qr_content">Your QR content</string>

    <string name="gen_qr">Generate QR</string>

    <string name="gen_text">Write anything</string>
    <string name="gen_phone">Enter phone number</string>
    <string name="gen_mailto">Recipient email</string>
    <string name="gen_subject">Email subject</string>
    <string name="gen_body_email">Email body</string>
    <string name="gen_body_sms">SMS body</string>
    <string name="gen_link">Enter a link</string>
    <string name="gen_latitude">Latitude</string>
    <string name="gen_longitude">Longitude</string>

    <string name="interact_button">Interact</string>
    <string name="save_button">Save</string>
    <string name="share_button">Share</string>
    <string name="home_button">Home button</string>


</resources>