<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRDetailActivity">

    <ImageView
        android:id="@+id/qrImg"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/your_qr_code" />

    <TextView
        android:id="@+id/qrIntro"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="380dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/your_qr_code"
        android:gravity="center" />

    <TextView
        android:id="@+id/qrContent"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:hint="@string/your_qr_content"
        android:layout_marginTop="410dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <ImageButton
        android:id="@+id/genHomeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/interactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginStart="55dp"
        android:text="@string/interact_button" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginStart="200dp"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="200dp"
        android:text="@string/share_button" />
</RelativeLayout>