<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qrgendetail.QRGenEmailActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="EMAIL QR" />

    <ImageButton
        android:id="@+id/genEmailHomeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/green_custom_text_box"
        android:contentDescription="@string/home_button"
        android:src="@drawable/baseline_home_24" />

    <TextView
        android:id="@+id/qrEmailGenBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:background="@drawable/custom_text_box"
        android:gravity="center"
        android:text="@string/gen_qr"
        android:textColor="@color/dark_green"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/qrMailto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="250dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_mailto"/>

    <EditText
        android:id="@+id/qrSubject"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:layout_marginTop="350dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:inputType="textEmailSubject"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_subject"/>

    <EditText
        android:id="@+id/qrBody"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:ems="10"
        android:layout_marginTop="450dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:inputType="textMultiLine"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_body_email" />
</RelativeLayout>