<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qrgendetail.QRGenLocationActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="LOCATION QR" />

    <ImageButton
        android:id="@+id/genLocationHomeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/green_custom_text_box"
        android:contentDescription="@string/home_button"
        tools:srcCompat="@drawable/baseline_home_24" />

    <TextView
        android:id="@+id/qrLocationGenBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="660dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/gen_qr"
        android:background="@drawable/custom_text_box"
        android:textColor="@color/dark_green"/>

    <EditText
        android:id="@+id/qrLatitude"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="400dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_latitude"/>

    <EditText
        android:id="@+id/qrLongitude"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:layout_marginTop="510dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_longitude"/>
</RelativeLayout>