<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/info_txt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="335dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/app_intro"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:textSize="30sp" />

    <Button
        android:id="@+id/qr_scan_btn_id"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="320dp"
        android:background="@drawable/custom_text_box"
        android:text="@string/scan_qr"
        android:textColor="@color/dark_green"
        android:textSize="30sp" />

    <Button
        android:id="@+id/qr_gen_btn_id"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/custom_text_box"
        android:text="@string/gen_custom_qr"
        android:textColor="@color/dark_green"
        android:textSize="25sp" />

    <Button
        android:id="@+id/img_choose_btn_id"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/custom_text_box"
        android:text="@string/choose_img_qr"
        android:textColor="@color/dark_green"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/introImg"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO"
        android:background="@drawable/custom_text_box"
        android:src="@mipmap/custom_launcher_foreground" />

</RelativeLayout>