<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qrgendetail.QRGenPhoneActivity">

    <ImageButton
        android:id="@+id/genPhoneHomeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/home_button"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="260dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp" />

    <EditText
        android:id="@+id/qrPhone"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/gen_phone"
        android:inputType="phone"
        android:textSize="25sp" />

    <Button
        android:id="@+id/qrPhoneGenBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="25sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="550dp"
        android:text="@string/gen_qr" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="PHONE NUMBER QR" />
</RelativeLayout>