<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qrgendetail.QRGenTextActivity">


    <EditText
        android:id="@+id/qrText"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="360dp"
        android:inputType="text"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_text" />

    <ImageButton
        android:id="@+id/genTextHomeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/green_custom_text_box"
        android:contentDescription="@string/home_button"
        android:src="@drawable/baseline_home_24" />

    <TextView
        android:id="@+id/qrTextGenBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="660dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:text="@string/gen_qr"
        android:background="@drawable/custom_text_box"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="160dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="PLAIN TEXT QR" />
</RelativeLayout>