<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qrgendetail.QRGenLinkActivity">


    <EditText
        android:id="@+id/qrLink"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="300dp"
        android:inputType="textMultiLine"
        android:textSize="25sp"
        android:padding="20dp"
        android:background="@drawable/custom_text_box"
        android:hint="@string/gen_link" />

    <ImageButton
        android:id="@+id/genLinkHomeBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/green_custom_text_box"
        android:contentDescription="@string/home_button"
        android:src="@drawable/baseline_home_24" />

    <TextView
        android:id="@+id/qrLinkGenBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:textSize="25sp"
        android:text="@string/gen_qr"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/custom_text_box"
        android:textColor="@color/dark_green"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="LINK QR" />
</RelativeLayout>